# gitlet

./: CMakeLists.txt  README.md
src/: Commit.cpp  Commit.h  Repo.cpp  Repo.h  Serialize.hpp  StagingArea.cpp  StagingArea.h  Utils.cpp  Utils.h  main.cpp
tests/: test_Serialize.cpp  test_basic.cpp
